# acritoxinstaller

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  acritoxinstaller-0.2.kdev4  backend.cpp  backend.h  busyappfilter.cpp  busyappfilter.h  config.h.in  listdelegate.cpp  listdelegate.h  listitem.cpp  listitem.h  lxdesupport.cpp  lxdesupport.h  main.cpp  mainwizard.cpp  mainwizard.h
.kdev4/: acritoxinstaller-0.2.kdev4
backend/: backend.sh.in
backend/modules/: bootloader  cleanup  common  config  frontend  hdmap  init  install  install_configure  install_main  install_services  partitions  partmgr
debian/: acritoxinstaller-kanotix.install  changelog  control  copyright  kanotix-enable-persistent-live.install  rules
kanotix/: 9000-enable-persistent  acritoxinstaller.desktop  enable_persistent_live  enable_persistent_live.bash
kanotix/html/: welcome.html  willkommen.html
qtermwidget/: CMakeLists.txt  lib.pro  qtermwidget.cpp  qtermwidget.h
translations/: acritoxinstaller_de.ts
wizard/: bootloader.cpp  bootloader.h  bootloader.ui  hdmap.cpp  hdmap.h  hdmap.ui  installation.cpp  installation.h  installation.ui  network.cpp  network.h  network.ui  partitions.cpp  partitions.h  partitions.ui  partman.cpp  partman.h  partman.ui  partmansel.cpp  partmansel.h  partmansel.ui  rootpartition.cpp  rootpartition.h  rootpartition.ui  rootpwd.cpp  rootpwd.h  rootpwd.ui  summary.cpp  summary.h  summary.ui  usercfg.cpp  usercfg.h  usercfg.ui  userpwd.cpp  userpwd.h  userpwd.ui  welcome.cpp  welcome.h  welcome.ui
